[package]
name = "fltk-term"
version = "0.1.0"
edition = "2021"
description = "A minimal terminal widget for fltk"
repository = "https://github.com/fltk-rs/fltk-term"
documentation = "https://docs.rs/fltk-term"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
portable-pty =  "0.8"
vte =  "0.12.0"
fltk = "1.4.15"

[features]
debug-term = []