[package]
name = "fltk-term"
version = "0.1.3"
edition = "2021"
description = "A minimal terminal widget for fltk"
repository = "https://github.com/fltk-rs/fltk-term"
documentation = "https://docs.rs/fltk-term"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
portable-pty =  "0.8"
fltk = "1.4.19"

[features]
debug-term = []